# claude-code-rust

./: Cargo.toml  PERFORMANCE_COMPARISON.md  README.md
crates/api-client/: Cargo.toml
crates/claude-cli/: Cargo.toml
crates/tools/: Cargo.toml
src/commands/: upgrade.rs
src/skills/: discovery.rs
