[package]
name = "api-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Claude Code API Client - HTTP client, OAuth, streaming, and tool use support"

[dependencies]
# Workspace依赖
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
url.workspace = true
urlencoding.workspace = true
flate2.workspace = true
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
indexmap.workspace = true
async-stream.workspace = true

# 特定依赖
tokio-tungstenite = "0.21"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
percent-encoding = "2.3"

[features]
default = []

[dev-dependencies]
mockito = "1.1"
tokio-test = "0.4"