[package]
name = "tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Claude Code Tools - Tool definition and execution framework"

[dependencies]
# Workspace依赖
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
indexmap.workspace = true

# 特定依赖
git2 = "0.20"
glob = "0.3"
ignore = "0.4"
regex = "1.10"
walkdir = "2.4"
path-slash = "0.1"
home = "0.5"
whoami = "1.5"
glob-match = "0.2"

# 可选：api-client用于工具调用集成
api-client = { path = "../api-client", optional = true }

[features]
default = []
# 启用API工具调用支持
api-tool-use = ["api-client"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"